# eag3_session6_agent

./: .env.example  .gitignore  AGENTS.md  Assignment.md  CLAUDE.md  README.md  action.py  agent6.py  decision.py  llm.py  llm_log.py  mcp_server.py  memory.py  orchestrator.py  perception.py  pyproject.toml  schemas.py
docs/: EAG3-06.md  orchestrator-loop.html  orchestrator.md
prompt_validation/: decision_prompt.md  perception_prompt.md  validation_examples.json
scripts/: clean_state.sh  run_all.sh
state/: memory.json
state/artifacts/: art_15ada67761f7599b.json  art_30e2122eff43c08b.json  art_9789cf2120a911cd.json
tests/: conftest.py  test_action.py  test_decision.py  test_llm.py  test_llm_log.py  test_mcp_sandbox.py  test_memory.py  test_schemas.py
