[project]
name = "eag3-session6-agent"
version = "0.1.0"
description = "Session 6 agent architecture assignment implementation with Gemini Flash-Lite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "mcp>=1.9.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "ddgs>=9.0.0",
    "crawl4ai>=0.6.0",
    "tavily-python>=0.5.0",
    "google-genai>=2.3.0",
    "rich>=13.0",
]

[project.scripts]
orchestrator = "orchestrator:main"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
